--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ header {
 /* EDUCATION & CERTIFICATIONS
 -----------------------------------------------------------*/
 .education {
-  background-image: url(../images/joanna-kosinska-unsplash.jpg);
+  background-image: url(images/joanna-kosinska-unsplash.jpg);
   background-size: cover;
   background-position: top right;
   padding-bottom: 100px;
